Archive2/5b/58bd6675715fb0/output
main.cpp:23:1: error: macro "BOOST_FUSION_ADAPT_STRUCT_FILLER_0" passed 3 arguments, but takes just 2
     (DoubleTemplate<int,int>, ro) )
 ^
